Fix collapsing layout for schematic show view

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -53,7 +53,6 @@ html, body {
 
 
 .schematic-view {
-
   .white-stripe {
     background: white;
     padding: 0;
@@ -63,8 +62,10 @@ html, body {
     box-shadow: 0px 5px 15px 3px rgba(0,0,0,0.10);
   }
 
-  .right-column {
-    padding-top: 15px;
-    margin-left: -15px;
+  @media (min-width: 992px) {
+    .right-column {
+      padding-top: 15px;
+      margin-left: -15px;
+    }
   }
 }
